...

                        OutlinedTextField(
                            modifier = Modifier
                                .fillMaxWidth()
                                .padding(horizontal = 16.dp)
                                .focusRequester(focusRequester)
                                .testTag("NameField"),
                            value = value,
                            onValueChange = { newValue ->
                                Timber.d("onValueChange: $newValue")
                                valueState = newValue

                                if (value.text != newValue.text) {
...
